--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "ace-builds": "^1.4.12",
     "resize-observer-polyfill": "^1.5.1",
-    "vue": "^3.0.0-rc.10"
+    "vue": "^3.0.0"
   },
   "devDependencies": {
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.3"
   }
 }
