--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "importHelpers": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
+    "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "sourceMap": true,
