--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Like vue2-ace-editor but more functional and supports Vue 3",
   "main": "index.js",
   "module": "index.js",
+  "type": "module",
   "types": "index.d.ts",
   "repository": "git@github.com:CarterLi/vue3-ace-editor.git",
   "author": "李通洲 <carter.li@eoitek.com>",
@@ -12,11 +13,11 @@
     "build": "tsc -p ."
   },
   "dependencies": {
-    "ace-builds": "^1.4.12",
+    "ace-builds": "^1.4.13",
     "resize-observer-polyfill": "^1.5.1",
-    "vue": "^3.0.0"
+    "vue": "^3.2.26"
   },
   "devDependencies": {
-    "typescript": "^4.4.3"
+    "typescript": "^4.5.4"
   }
 }
