--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,16 +14,8 @@
     "baseUrl": "./",
     "lib": [
       "esnext",
-      "es2019",
-      "es2019.object",
-      "es2018",
-      "es2018.promise",
-      "es2017",
-      "es2017.object",
-      "es2017.string",
       "dom",
-      "dom.iterable",
-      "scripthost"
+      "dom.iterable"
     ]
   },
   "exclude": [
