--- a/demo-source/package.json
+++ b/demo-source/package.json
@@ -8,12 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "ace-builds": "^1.9.5",
-    "vue": "^3.2.37",
+    "ace-builds": "^1.12.1",
+    "vue": "^3.2.41",
     "vue3-ace-editor": "^2.2.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.0.3",
-    "vite": "^3.0.7"
+    "@vitejs/plugin-vue": "^3.1.2",
+    "sass": "^1.55.0",
+    "vite": "^3.1.8"
   }
 }
