--- a/demo-source/tsconfig.json
+++ b/demo-source/tsconfig.json
@@ -17,17 +17,8 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable"
-    ]
+    "lib": ["esnext", "dom", "dom.iterable"]
   },
-  "include": [
-    "src/**/*.js",
-    "src/**/*.vue"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src/**/*.js", "src/**/*.vue", "src/main.ts", "src/ace-config.ts"],
+  "exclude": ["node_modules"]
 }
